--- a/apps/templates/kube-dashboard-nodeport.yaml
+++ b/apps/templates/kube-dashboard-nodeport.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app.kubernetes.io/name: kubernetes-dashboard
+    app.kubernetes.io/instance: kubernetes-dashboard
+    app.kubernetes.io/name: kong
   ports:
     - protocol: TCP
       port: 443
