--- a/apps/templates/namespaces.yaml
+++ b/apps/templates/namespaces.yaml
@@ -32,3 +32,10 @@ metadata:
   name: kubernetes-dashboard
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: metallb-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
