--- a/apps/templates/nginx-test.yaml
+++ b/apps/templates/nginx-test.yaml
@@ -6,50 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: ''
-    targetRevision: HEAD
-    path: ''
-    directory:
-      recurse: true
-    kustomize: {}
-    helm: {}
-    manifest:
-      apiVersion: v1
-      kind: List
-      items:
-        - apiVersion: apps/v1
-          kind: Deployment
-          metadata:
-            name: nginx
-            namespace: default
-          spec:
-            replicas: 2
-            selector:
-              matchLabels:
-                app: nginx
-            template:
-              metadata:
-                labels:
-                  app: nginx
-              spec:
-                containers:
-                  - name: nginx
-                    image: nginx:latest
-                    ports:
-                      - containerPort: 80
-        - apiVersion: v1
-          kind: Service
-          metadata:
-            name: nginx
-            namespace: default
-          spec:
-            selector:
-              app: nginx
-            ports:
-              - protocol: TCP
-                port: 80
-                targetPort: 80
-            type: LoadBalancer
+    repoURL: 'https://github.com/kj800x/homelab.git'
+    targetRevision: main
+    path: nginx-test/manifests
   destination:
     server: https://kubernetes.default.svc
     namespace: default
