--- a/apps/templates/nginx-test.yaml
+++ b/apps/templates/nginx-test.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/kj800x/homelab.git'
-    targetRevision: main
+    targetRevision: master
     path: nginx-test/manifests
   destination:
     server: https://kubernetes.default.svc
