--- a/apps/templates/metallb.yaml
+++ b/apps/templates/metallb.yaml
@@ -29,3 +29,12 @@ metadata:
 spec:
   addresses:
   - 10.60.2.0/24
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: l2adv-first-pool
+  namespace: metallb-system
+spec:
+  ipAddressPools:
+    - first-pool
