--- a/apps/templates/k8s-gateway.yaml
+++ b/apps/templates/k8s-gateway.yaml
@@ -12,6 +12,11 @@ spec:
     helm:
       values: |
         domain: kube
+        coredns:
+          forward:
+            upstream:
+              - 1.1.1.1
+              - 8.8.8.8
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
