--- a/apps/templates/k8s-gateway.yaml
+++ b/apps/templates/k8s-gateway.yaml
@@ -12,11 +12,20 @@ spec:
     helm:
       values: |
         domain: kube
-        coredns:
-          forward:
-            upstream:
-              - 1.1.1.1
-              - 8.8.8.8
+        extraZonePlugins:
+          - name: log
+          - name: errors
+          - name: health
+            configBlock: |-
+              lameduck 5s
+          - name: ready
+          - name: prometheus
+            parameters: 0.0.0.0:9153
+          - name: forward
+            parameters: . 1.1.1.1 8.8.8.8
+          - name: loop
+          - name: reload
+          - name: loadbalance
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
