--- a/apps/cluster-infra.yaml
+++ b/apps/cluster-infra.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   namespace: argocd
-  name: apps
+  name: cluster-infra
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
