--- a/cluster-infra/metallb.yaml
+++ b/cluster-infra/metallb.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     namespace: metallb-system
-    server: {{ .Values.spec.destination.server }}
+    server: https://kubernetes.default.svc
   project: default
   source:
     chart: metallb
