--- a/apps/guestbook.yaml
+++ b/apps/guestbook.yaml
@@ -14,3 +14,18 @@ spec:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps
     targetRevision: HEAD
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/instance: guestbook
+  name: guestbook-ui-lb
+  namespace: argocd
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 80
+  selector:
+    app: guestbook-ui
