--- a/apps/nginx-test.yaml
+++ b/apps/nginx-test.yaml
@@ -14,3 +14,7 @@ spec:
     path: nginx-test
     repoURL: https://github.com/kj800x/homelab
     targetRevision: HEAD
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
