--- a/cluster-infra/kube-dashboard.yaml
+++ b/cluster-infra/kube-dashboard.yaml
@@ -22,10 +22,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubernetes-dashboard-nodeport
+  name: kubernetes-dashboard-lb
   namespace: kubernetes-dashboard
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app.kubernetes.io/instance: kubernetes-dashboard
     app.kubernetes.io/name: kong
@@ -33,7 +33,6 @@ spec:
     - protocol: TCP
       port: 443
       targetPort: 8443
-      nodePort: 31000
 ---
 apiVersion: v1
 kind: ServiceAccount
