also needs a namespace

--- a/cluster-infra/namespaces.yaml
+++ b/cluster-infra/namespaces.yaml
@@ -39,3 +39,10 @@ metadata:
   name: metallb-system
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: victoria-metrics
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
