--- a/victoria-metrics/deployment.yaml
+++ b/victoria-metrics/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           command:
             - "/victoria-metrics-prod"
           args:
-            - "--promscrape.config=/etc/prometheus/prometheus.yml"
+            - "--promscrape.config=/etc/prometheus/scrape/prometheus.yml"
             - "-maxLabelsPerTimeseries=35"
             - "-selfScrapeInterval=10s"
             - "-retentionPeriod=2y"
@@ -29,15 +29,16 @@ spec:
             - containerPort: 8428
           volumeMounts:
             - name: prometheus-config
-              mountPath: /etc/prometheus/prometheus.yml
-              subPath: prometheus.yml
+              mountPath: /etc/prometheus/scrape
             - name: victoria-metrics-data
               mountPath: /victoria-metrics-data
+              options:
+                - readWrite
       volumes:
         - name: prometheus-config
           nfs:
             server: 10.60.1.15
-            path: /data/mounts/promscrape/prometheus.yml
+            path: /data/mounts/promscrape/
         - name: victoria-metrics-data
           nfs:
             server: 10.60.1.15
