--- a/cluster-infra/namespaces.yaml
+++ b/cluster-infra/namespaces.yaml
@@ -46,3 +46,11 @@ metadata:
   name: victoria-metrics
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: grafana
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+
