--- a/cluster-infra/namespaces.yaml
+++ b/cluster-infra/namespaces.yaml
@@ -53,4 +53,11 @@ metadata:
   name: grafana
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: heartbeat-rs
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
 
