--- a/heartbeat-rs/deployment.yaml
+++ b/heartbeat-rs/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: heartbeat-rs
     spec:
+      imagePullSecrets:
+        - name: ghcr-kj800x
       containers:
         - name: heartbeat-rs
           image: ghcr.io/kj800x/heartbeat-rs:master
