--- a/cluster-infra/namespaces.yaml
+++ b/cluster-infra/namespaces.yaml
@@ -60,4 +60,10 @@ metadata:
   name: heartbeat-rs
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
-
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: node-exporter
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
