--- a/cluster-infra/namespaces.yaml
+++ b/cluster-infra/namespaces.yaml
@@ -67,3 +67,11 @@ metadata:
   name: node-exporter
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: miniflux
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+
