--- a/miniflux/postgres-deployment.yaml
+++ b/miniflux/postgres-deployment.yaml
@@ -23,7 +23,7 @@ spec:
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: miniflux-postgres-secret
+              name: miniflux-admin-secret
               key: POSTGRES_PASSWORD
         - name: PGDATA
           value: "/var/lib/postgresql/data"
