Why are these impossible to get right

--- a/miniflux/postgres-deployment.yaml
+++ b/miniflux/postgres-deployment.yaml
@@ -24,7 +24,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: miniflux-admin-secret
-              key: POSTGRES_PASSWORD
+              key: ADMIN_PASSWORD
         - name: PGDATA
           value: "/var/lib/postgresql/data"
         ports:
