--- a/miniflux/deployment.yaml
+++ b/miniflux/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: miniflux
   namespace: miniflux
+  labels:
+    app: miniflux
 spec:
   replicas: 1
   selector:
