--- a/miniflux/postgres-deployment.yaml
+++ b/miniflux/postgres-deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: postgres
   namespace: miniflux
+  labels:
+    app: postgres
 spec:
   replicas: 1
   selector:
@@ -14,26 +16,29 @@ spec:
         app: postgres
     spec:
       containers:
-      - name: postgres
-        image: postgres:15
-        command: ["postgres"]
-        env:
-        - name: POSTGRES_USER
-          value: "miniflux"
-        - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: miniflux-admin-secret
-              key: ADMIN_PASSWORD
-        - name: PGDATA
-          value: "/var/lib/postgresql/data"
-        ports:
-        - containerPort: 5432
-        volumeMounts:
-        - name: postgres-storage
-          mountPath: "/var/lib/postgresql/data"
+        - name: postgres
+          image: postgres:15
+          command:
+            - "docker-entrypoint.sh"
+          args:
+            - "postgres"
+          env:
+            - name: POSTGRES_USER
+              value: "miniflux"
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: miniflux-admin-secret
+                  key: ADMIN_PASSWORD
+            - name: PGDATA
+              value: /var/lib/postgresql/data
+          ports:
+            - containerPort: 5432
+          volumeMounts:
+            - name: postgres-data
+              mountPath: /var/lib/postgresql/data
       volumes:
-      - name: postgres-storage
-        nfs:
-          server: 10.60.1.15
-          path: "/data/services/miniflux-postgres"
+        - name: postgres-data
+          nfs:
+            server: 10.60.1.15
+            path: /data/services/miniflux-postgres
