--- a/jellyfin/service.yaml
+++ b/jellyfin/service.yaml
@@ -8,15 +8,19 @@ spec:
   selector:
     app: jellyfin
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 8096
       targetPort: 8096
-    - protocol: TCP
+    - name: https
+      protocol: TCP
       port: 8920
       targetPort: 8920
-    - protocol: UDP
+    - name: dlna
+      protocol: UDP
       port: 1900
       targetPort: 1900
-    - protocol: UDP
+    - name: discovery
+      protocol: UDP
       port: 7359
       targetPort: 7359
