--- a/home-sensors/weatherflow-tempest-sensor/deployment.yaml
+++ b/home-sensors/weatherflow-tempest-sensor/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       labels:
         app: weatherflow-tempest-sensor
     spec:
+      # TODO: since this needs to bind to the host network, it should be set to some random high port instead of the prime real estate of 8080
       hostNetwork: true
       imagePullSecrets:
         - name: ghcr-kj800x
@@ -27,10 +28,4 @@ spec:
           env:
             - name: NODE_ENV
               value: "production"
-          ports:
-            - containerPort: 50222
-              hostPort: 50222 # Needs to use hostPort to get UDP broadcast packets
-              protocol: UDP
-            - containerPort: 8080
-              protocol: TCP
           workingDir: "/app"
