--- a/home-sensors/nest-sensor/deployment.yaml
+++ b/home-sensors/nest-sensor/deployment.yaml
@@ -46,6 +46,14 @@ spec:
           ports:
             - containerPort: 9100
               protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 9100
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 3
           volumeMounts:
             - name: access-token-dir
               mountPath: /app/data
