--- a/home-sensors/prom-money-rs/deployment.yaml
+++ b/home-sensors/prom-money-rs/deployment.yaml
@@ -36,4 +36,12 @@ spec:
           ports:
             - containerPort: 9090
               protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 9090
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 3
           workingDir: "/usr/src/prom-money-rs"
