Update deployment for weatherflow sensor because we can't have multiple pods running at once

--- a/home-sensors/weatherflow-tempest-sensor/deployment.yaml
+++ b/home-sensors/weatherflow-tempest-sensor/deployment.yaml
@@ -6,6 +6,9 @@ metadata:
   labels:
     app: weatherflow-tempest-sensor
 spec:
+  strategy:
+    # Required because the new pods won't start up properly if the old ones are still running
+    type: Recreate
   replicas: 1
   revisionHistoryLimit: 1
   selector:
