--- a/victoria-metrics/deployment.yaml
+++ b/victoria-metrics/deployment.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     app: victoria-metrics
 spec:
+  strategy:
+    # Required because VictoriaMetrics in single-instance mode uses a locking
+    # strategy to prevent multiple instances from writing to the same storage
+    type: Recreate
   revisionHistoryLimit: 1
   replicas: 1
   selector:
