--- a/grafana/service.yaml
+++ b/grafana/service.yaml
@@ -9,5 +9,8 @@ spec:
     app: grafana
   ports:
     - protocol: TCP
+      port: 80
+      targetPort: 3000
+    - protocol: TCP
       port: 3000
       targetPort: 3000
