why do these need to be named now

--- a/grafana/service.yaml
+++ b/grafana/service.yaml
@@ -8,9 +8,11 @@ spec:
   selector:
     app: grafana
   ports:
-    - protocol: TCP
+    - name: http-default
+      protocol: TCP
       port: 80
       targetPort: 3000
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 3000
       targetPort: 3000
