--- a/apps/homepage.yaml
+++ b/apps/homepage.yaml
@@ -1,6 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
+metadata:
+  namespace: argocd
+  name: homepage
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
+  destination:
+    namespace: argocd
+    server: https://kubernetes.default.svc
+  project: default
   sources:
   - repoURL: https://jameswynn.github.io/helm-charts
     chart: jameswynn/homepage
@@ -11,3 +20,7 @@ spec:
   - repoURL: https://github.com/kj800x/homelab
     targetRevision: master
     ref: values
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
