--- a/apps/homepage.yaml
+++ b/apps/homepage.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: homepage
     server: https://kubernetes.default.svc
   project: default
   sources:
