--- a/bastion/deployment.yaml
+++ b/bastion/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: bastion
   namespace: bastion
 spec:
+  revisionHistoryLimit: 1
   replicas: 1
   selector:
     matchLabels:
@@ -14,34 +15,44 @@ spec:
         app: bastion
     spec:
       containers:
-      - name: bastion
-        image: binlab/bastion:1.2.0
-        ports:
-        - containerPort: 22
-        env:
-        - name: PUBKEY_AUTHENTICATION
-          value: "true"
-        - name: GATEWAY_PORTS
-          value: "true"
-        - name: PERMIT_TUNNEL
-          value: "true"
-        - name: X11_FORWARDING
-          value: "true"
-        - name: TCP_FORWARDING
-          value: "true"
-        - name: AGENT_FORWARDING
-          value: "true"
-        volumeMounts:
-        - name: authorized-keys
-          mountPath: /var/lib/bastion/authorized_keys
-          subPath: authorized_keys
-        - name: host-keys
-          mountPath: /usr/etc/ssh
+        - name: bastion
+          image: binlab/bastion:1.2.0
+          ports:
+            - containerPort: 22
+          readinessProbe:
+            tcpSocket:
+              port: 22
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            tcpSocket:
+              port: 22
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          env:
+            - name: PUBKEY_AUTHENTICATION
+              value: "true"
+            - name: GATEWAY_PORTS
+              value: "true"
+            - name: PERMIT_TUNNEL
+              value: "true"
+            - name: X11_FORWARDING
+              value: "true"
+            - name: TCP_FORWARDING
+              value: "true"
+            - name: AGENT_FORWARDING
+              value: "true"
+          volumeMounts:
+            - name: authorized-keys
+              mountPath: /var/lib/bastion/authorized_keys
+              subPath: authorized_keys
+            - name: host-keys
+              mountPath: /usr/etc/ssh
       volumes:
-      - name: authorized-keys
-        configMap:
-          name: bastion-keys
-      - name: host-keys
-        nfs:
-          server: 10.60.1.15
-          path: /data/services/bastion
+        - name: authorized-keys
+          configMap:
+            name: bastion-keys
+        - name: host-keys
+          nfs:
+            server: 10.60.1.15
+            path: /data/services/bastion
