--- a/home-sensors/timelapse-rs/grow-tent/deployment.yaml
+++ b/home-sensors/timelapse-rs/grow-tent/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         - name: timelapse-rs-grow-tent
           image: ghcr.io/kj800x/timelapse-rs:commit-73b539e5dbbbf27d58e729a7e454bd40c4cb4556
-          command: ["./timelapse-rs"]
+          command: ["timelapse-rs"]
           workingDir: "/usr/src/timelapse-rs"
           env:
             - name: OUTPUT_FOLDER
