--- a/life-logger/deployment.yaml
+++ b/life-logger/deployment.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     app: life-logger
 spec:
+  strategy:
+    # Required because life-logger cannot handle previous instances still having
+    # the database file open
+    type: Recreate
   replicas: 1
   revisionHistoryLimit: 1
   selector:
