--- a/home-sensors/docker-wyze-bridge/secret.yaml
+++ b/home-sensors/docker-wyze-bridge/secret.yaml
@@ -2,5 +2,6 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: wyze-creds
+  namespace: home-sensors
 spec:
   itemPath: "vaults/kube/items/wyze-creds"
