--- a/home-sensors/docker-wyze-bridge/service.yaml
+++ b/home-sensors/docker-wyze-bridge/service.yaml
@@ -8,31 +8,31 @@ spec:
   selector:
     app: docker-wyze-bridge
   ports:
-    - name: http
+    - name: WEB-UI
       protocol: TCP
       port: 5000
       targetPort: 5000
-    - name: http
+    - name: WEB-UI-ALT
       protocol: TCP
       port: 5050
       targetPort: 5050
-    - name: stream
+    - name: RTMP
       protocol: TCP
       port: 1935
       targetPort: 1935
-    - name: stream
+    - name: RTSP
       protocol: TCP
       port: 8554
       targetPort: 8554
-    - name: stream
+    - name: HLS
       protocol: TCP
       port: 8888
       targetPort: 8888
-    - name: stream
+    - name: WebRTC
       protocol: TCP
       port: 8889
       targetPort: 8889
-    - name: stream
+    - name: WebRTC/ICE
       protocol: UDP
       port: 8189
       targetPort: 8189
