--- a/home-sensors/docker-wyze-bridge/deployment.yaml
+++ b/home-sensors/docker-wyze-bridge/deployment.yaml
@@ -16,25 +16,26 @@ spec:
       labels:
         app: docker-wyze-bridge
     spec:
+      hostNetwork: true
       containers:
         - name: docker-wyze-bridge
           image: mrlt8/wyze-bridge:latest
           imagePullPolicy: Always
-          ports:
-            - containerPort: 1935
-              protocol: TCP
-            - containerPort: 8554
-              protocol: TCP
-            - containerPort: 8888
-              protocol: TCP
-            - containerPort: 8889
-              protocol: TCP
-            - containerPort: 8189
-              protocol: UDP
-            - containerPort: 5050
-              protocol: TCP
-            - containerPort: 5000
-              protocol: TCP
+          # ports:
+          #   - containerPort: 1935
+          #     protocol: TCP
+          #   - containerPort: 8554
+          #     protocol: TCP
+          #   - containerPort: 8888
+          #     protocol: TCP
+          #   - containerPort: 8889
+          #     protocol: TCP
+          #   - containerPort: 8189
+          #     protocol: UDP
+          #   - containerPort: 5050
+          #     protocol: TCP
+          #   - containerPort: 5000
+          #     protocol: TCP
           env:
             - name: WB_AUTH
               value: "false"
