update wyze bridge config

--- a/home-sensors/docker-wyze-bridge/deployment.yaml
+++ b/home-sensors/docker-wyze-bridge/deployment.yaml
@@ -39,6 +39,12 @@ spec:
           env:
             - name: WB_AUTH
               value: "false"
+            - name: FILTER_BLOCK
+              value: "true"
+            - name: FILTER_NAMES
+              value: "Oil,BACK YARD,Screen House,Grow Tent"
+            - name: ROTATE_DOOR
+              value: "true"
             - name: WYZE_EMAIL
               valueFrom:
                 secretKeyRef:
