--- a/home-sensors/test-deploy-config.yaml
+++ b/home-sensors/test-deploy-config.yaml
@@ -4,6 +4,7 @@ metadata:
   name: test-repo
   namespace: home-sensors
 spec:
+  resourceType: Deployment
   autodeploy: true
   repo:
     owner: kj800x
