deploy config must be valid

--- a/home-sensors/manual-deploy-config.yaml
+++ b/home-sensors/manual-deploy-config.yaml
@@ -21,6 +21,7 @@ spec:
         labels:
           app: manual-deploy-config
       spec:
+        restartPolicy: OnFailure
         imagePullSecrets:
           - name: ghcr-kj800x
         containers:
