--- a/home-sensors/test-cronjob-deploy-config.yaml
+++ b/home-sensors/test-cronjob-deploy-config.yaml
@@ -17,6 +17,7 @@ spec:
       spec:
         template:
           spec:
+            restartPolicy: OnFailure
             imagePullSecrets:
               - name: ghcr-kj800x
             containers:
