--- a/cluster-infra/cicd-service.yaml
+++ b/cluster-infra/cicd-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cicd
-  namespace: cluster-infra
+  namespace: argocd
 spec:
   type: LoadBalancer
   selector:
