--- a/cluster-infra/cicd-deployment.yaml
+++ b/cluster-infra/cicd-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cicd
-  namespace: cluster-infra
+  namespace: argocd
   labels:
     app: cicd
 spec:
