--- a/cluster-infra/cicd-secret.yaml
+++ b/cluster-infra/cicd-secret.yaml
@@ -2,6 +2,6 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: cicd-auth
-  namespace: cluster-infra
+  namespace: argocd
 spec:
   itemPath: "vaults/kube/items/cicd-auth"
