--- a/cluster-infra/cicd-deployment.yaml
+++ b/cluster-infra/cicd-deployment.yaml
@@ -16,6 +16,7 @@ spec:
       labels:
         app: cicd
     spec:
+      serviceAccountName: cicd-operator
       imagePullSecrets:
         - name: ghcr-kj800x
       containers:
