--- a/cluster-infra/external-dns.yaml
+++ b/cluster-infra/external-dns.yaml
@@ -40,4 +40,4 @@ spec:
       volumes:
         - name: aws-credentials
           secret:
-            secretName: externaldns-aws-key
+            secretName: external-dns-file
