--- a/cluster-infra/external-dns.yaml
+++ b/cluster-infra/external-dns.yaml
@@ -22,12 +22,11 @@ spec:
           args:
             - --source=service
             - --source=ingress
-            - --source=crd
-            - --source=node
             - --provider=aws
             - --policy=upsert-only
             - --aws-zone-type=public
             - --registry=txt
+            - --log-level=debug
           env:
             - name: AWS_DEFAULT_REGION
               value: us-east-1
