Fix secret setup

--- a/cluster-infra/external-dns-secret.yaml
+++ b/cluster-infra/external-dns-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
-  name: externaldns-aws-key
+  name: externaldns-aws-key-file
   namespace: argocd
 spec:
-  itemPath: "vaults/kube/items/externaldns-aws-key"
+  itemPath: "vaults/kube/items/externaldns-aws-key-file"
