--- a/life-logger/service.yaml
+++ b/life-logger/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: life-logger
   namespace: life-logger
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: ll.home.coolkev.com
 spec:
   type: LoadBalancer
   selector:
