--- a/cluster-infra/cicd-service.yaml
+++ b/cluster-infra/cicd-service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: cicd
   namespace: argocd
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: cicd.home.coolkev.com
 spec:
   type: LoadBalancer
   selector:
