--- a/grafana/service.yaml
+++ b/grafana/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: grafana
   namespace: grafana
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: grafana.home.coolkev.com
 spec:
   type: LoadBalancer
   selector:
