--- a/jellyfin/service.yaml
+++ b/jellyfin/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: jellyfin
   namespace: jellyfin
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: jellyfin.home.coolkev.com
 spec:
   type: LoadBalancer
   selector:
