--- a/cluster-infra/webhooks-enforcer-secret.yaml
+++ b/cluster-infra/webhooks-enforcer-secret.yaml
@@ -2,6 +2,6 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: webhooks-enforcer-secret
-  namespace: cluster-infra
+  namespace: argocd
 spec:
   itemPath: "vaults/kube/items/webhooks-enforcer-secret"
