Add restart policy to webhooks enforcer deployment

--- a/cluster-infra/webhooks-enforcer-deploy-config.yaml
+++ b/cluster-infra/webhooks-enforcer-deploy-config.yaml
@@ -16,6 +16,7 @@ spec:
       spec:
         template:
           spec:
+            restartPolicy: OnFailure
             containers:
               - name: webhooks-enforcer
                 image: ghcr.io/kj800x/webhooks-enforcer
