--- a/cluster-infra/kube-dashboard-proxy-deploy-config.yaml
+++ b/cluster-infra/kube-dashboard-proxy-deploy-config.yaml
@@ -29,10 +29,8 @@ spec:
           - name: auth-adder
             image: ghcr.io/kj800x/auth-adder
             env:
-              - name: UPSTREAM_URL
+              - name: UPSTREAM
                 value: "https://kubernetes-dashboard-lb.kubernetes-dashboard.svc.cluster.local"
-              - name: PORT
-                value: "80"
               - name: BEARER_TOKEN
                 valueFrom:
                   secretKeyRef:
