Add externaldns to ingress

--- a/nginx-test/service.yaml
+++ b/nginx-test/service.yaml
@@ -18,6 +18,8 @@ kind: Ingress
 metadata:
   name: nginx-ingress
   namespace: default
+  annotations:
+    external-dns.alpha.kubernetes.io/target: nginx-t.coolkev.com
 spec:
   rules:
   - http:
