--- a/nginx-test/service.yaml
+++ b/nginx-test/service.yaml
@@ -19,7 +19,7 @@ metadata:
   name: nginx-ingress
   namespace: default
   annotations:
-    external-dns.alpha.kubernetes.io/target: nginx-t.coolkev.com
+    external-dns.alpha.kubernetes.io/hostname: nginx-t.coolkev.com
 spec:
   rules:
   - http:
