Add configuration for MetalLB controller and enable Traefik published service

--- a/traefik/values.yaml
+++ b/traefik/values.yaml
@@ -2,3 +2,9 @@ ingressRoute:
   dashboard:
     enabled: true
     entryPoints: ["web"]
+
+providers:
+  kubernetesingress:
+    publishedService:
+      enabled: true
+      pathOverride: "traefik/traefik"
