--- a/cluster-infra/metallb.yaml
+++ b/cluster-infra/metallb.yaml
@@ -14,6 +14,11 @@ spec:
     chart: metallb
     repoURL: https://metallb.github.io/metallb/
     targetRevision: 0.14.9
+    helm:
+      values: |
+        controller:
+          ingressStatusUpdates:
+            enabled: false
   syncPolicy:
     automated:
       prune: true
