--- a/traefik/values.yaml
+++ b/traefik/values.yaml
@@ -4,7 +4,7 @@ ingressRoute:
     entryPoints: ["web"]
 
 providers:
-  kubernetesingress:
+  kubernetesIngress:
     publishedService:
       enabled: true
       pathOverride: "traefik/traefik"
